Fix: Improved the test coverage
