# cmd/main.go
@@ -6,13 +6,16 @@ import (
 	"log/slog"
 	"net/http"
 	"os"
+	"reflect"
 
 	"github.com/franzego/transgoder/internal/config"
 	"github.com/franzego/transgoder/internal/connection"
 	"github.com/franzego/transgoder/internal/handler"
 	"github.com/franzego/transgoder/internal/repository"
 	"github.com/franzego/transgoder/internal/service"
+	"github.com/franzego/transgoder/pkg"
 	"github.com/gin-gonic/gin"
+	"github.com/go-playground/validator/v10"
 	"github.com/joho/godotenv"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -32,9 +35,9 @@ func main() {
 	ctx := context.Background()
 	slog.Info("starting program")
 
-	err := godotenv.Load()
+	err := godotenv.Load(".env")
 	if err != nil {
-		slog.Error("failed to load app.env", "error", err)
+		slog.Error("failed to load .env", "error", err)
 		os.Exit(1)
 	}
 
@@ -49,6 +52,15 @@ func main() {
 	logger := cfg.Logger.LoadLogger()
 	logger.Info("Starting Transcoder API", "port", cfg.Server.Port)
 
+	validate := validator.New()
+	validate.RegisterTagNameFunc(func(fld reflect.StructField) string {
+		name := fld.Tag.Get("json")
+		if name == "-" {
+			return ""
+		}
+		return name
+	})
+	pkg.RegisterCustomValidations(validate)
 	// Connect to PostgreSQL
 	postgresConn, err := connection.NewPostgresConnection(ctx, cfg, logger)
 	if err != nil {
@@ -63,6 +75,7 @@ func main() {
 		logger.Error("Failed to connect to minio", "error", err)
 		os.Exit(1)
 	}
+	// Connect to Redis
 	redisClient, err := connection.NewRedisConnection(ctx, cfg, logger)
 	if err != nil {
 		logger.Error("Failed to connect to redis", "error", err)
@@ -83,7 +96,7 @@ func main() {
 	redisService := service.NewRedisService(repository.NewRedisRepo(&cfg.Redis, redisClient))
 
 	// Initialize Handler
-	h := handler.NewHandler(minioService, repoService, redisService, logger)
+	h := handler.NewHandler(minioService, repoService, redisService, logger, validate)
 
 	// Setup Gin router
 	router := gin.New()
@@ -113,6 +126,13 @@ func main() {
 	{
 		uploadGroup.POST("/initiate", h.InitiateMultipartUploadHandler)
 		uploadGroup.POST("/complete", h.CompleteMultipartUploadHandler)
+	}
+
+	// Status routes
+	statusGroup := router.Group("/status")
+	{
+		statusGroup.POST("/:id/update", h.UpdateStatus)
+		statusGroup.GET("/:id/update", h.GetJobStatus)
 	}
 
 	// Swagger documentation
